# ListingIQ

./: CONTRIBUTING.md  LICENSE  LOCAL_DEVELOPMENT.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS_V2.md  README.md  docker-compose.yml  local_analyses.json  supabase-schema.sql
backend/: .env.example  .gitignore  Dockerfile  env.example  env.production.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py  validation.py
backend/app/models/: __init__.py
backend/app/routers/: analyze.py  analyze_streaming.py  model_info.py  user.py  websocket.py
backend/app/services/: async_processor.py  database.py  llm_service.py  logger.py  optimized_prompts.py  performance_analyzer.py  supabase.py  zillow.py
frontend/: .env.example  Dockerfile  env.example  env.production.example  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/saved/: page.tsx
frontend/components/auth/: AuthLayout.tsx  AuthToggle.tsx  ProfileOverlay.tsx  ProtectedRoute.tsx  SignInForm.tsx  SignUpForm.tsx  index.ts
frontend/components/hero/: HeroHeading.tsx  HeroSection.tsx  ListingInputForm.tsx
frontend/components/homepage/: LoadingState.tsx
frontend/components/how-it-works/: HowItWorks.tsx
frontend/components/layout/: LandingLayout.tsx  Navigation.tsx
frontend/components/listing/: ActionButtons.tsx  (+5 more)
frontend/lib/: analyze-streaming.ts  analyze.ts  auth.tsx  pdf-utils.ts  save-analysis-hybrid.ts  save-analysis.ts  websocket-hook.ts
frontend/public/: manifest.json
frontend/scripts/: dev-https.js
scripts/: dev-setup.sh  setup-ci-cd.sh
supabase/: config.toml
(+24 files in other folders)
