[project]
name = "listingiq-backend"
version = "0.1.0"
description = "FastAPI backend for ListingIQ: AI-powered insights for real estate listings."
authors = [
    { name = "Aarav Khanduja" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.110.0,<1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = { extras = ["standard"], version = "^0.29.0" }
black = "^25.1.0"
ruff = "^0.12.4"
pre-commit = "^4.2.0"
