[project]
name = "app"
version = "0.1.0"
description = "FastAPI backend for ListingIQ: AI-powered insights for real estate listings."
authors = [
    { name = "Aarav Khanduja" }
]
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.110.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
supabase = ["supabase>=2.0.0"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.10.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = { extras = ["standard"], version = "^0.29.0" }
black = "^25.1.0"
ruff = "^0.12.4"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
